<?xml version="1.0"?>
<package>
  <name>arbotix</name>
  <version>0.1.0</version>
  <description>Microcontroller firmware and serial driver for Jaws 2.</description>

  <maintainer email="edin.3@osu.edu">Peter Edin</maintainer>
  <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>

  <license>BSD</license>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="website">http://github.com/uwrt-osu/jaws-arbotix</url>

  <author email="edin.3@osu.edu">Peter Edin</author>
  <author email="fletcher.236@osu.edu">Charles Fletcher</author>
  <author email="cary.42@osu.edu">Conor Cary</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>jaws_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>jaws_msgs</run_depend>

  <export>
  </export>
</package>
