<?xml version="1.0"?>
<package>
  <name>jaws2_solver</name>
  <version>0.0.0</version>
  <description>Jaws 2's thrust mapping in Ceres Solver.</description>

  <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="repository">http://github.com/osu-uwrt/jaws-2</url>

  <license>BSD</license>

  <author email="cary.42@osu.edu">Conor Cary</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>jaws2_msgs</build_depend>
  <run_depend>jaws2_msgs</run_depend>

  <export>
  </export>
</package>
